# mcp-car-agent

./: .env.example  .pylintrc  README.md  pyproject.toml
.github/workflows/: python-app.yml
database/: database.sql  diagram.mwb.bak
docker/: docker-compose.yml
mcp_car_agent/core/: config.py
mcp_car_agent/core/database/: models.py
mcp_car_agent/core/database/repository/: base_repository.py  car_repository.py  connection_repository.py  engine_repository.py  equipment_repository.py  manufacturer_repository.py  transmission_repository.py
mcp_car_agent/core/interfaces/: database_repository.py
mcp_car_agent/core/schemas/: car_schema.py  engine_schema.py  equipment_schema.py  manufacturer_schema.py  transmission_schema.py
tests/integration/: conftest.py
tests/integration/core/database/repository/: test_base_repository_integration.py  test_car_repository_integration.py  test_engine_repository_integration.py  test_equipment_repository_integration.py
tests/mocks/: models.py  schemas.py
tests/unit/: conftest.py
tests/unit/core/database/repository/: test_base_repository_unit.py  test_car_repository_unit.py  test_connection_repository_unit.py  test_engine_repository_unit.py  test_equipment_repository_unit.py
tests/unit/core/schemas/: test_car_schema_unit.py  test_engine_schema_unit.py  test_equipment_schema_unit.py  test_manufacturer_schema_unit.py  test_transmission_schema_unit.py
